PLT-1126 & PLT-1127: Dropdown Visibility fixes added.

--- a/src/pages/settings/panels/breaker-config-styles.scss
+++ b/src/pages/settings/panels/breaker-config-styles.scss
@@ -28,3 +28,7 @@
     align-items: center;
     justify-content: center;
 }
+
+.dropdown-visibility {
+    overflow: visible !important;
+}
